katars/tests/snaps/snapshots/snap_errors__enum_type_mismatch.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"Opt[Int].Val(\\\"wrong\\\")\")"
---
Error: type mismatch: expected Int, got Str
   ╭─[<test>:1:14]
   │
 1 │ Opt[Int].Val("wrong")
   │              ───┬───  
   │                 ╰───── type mismatch: expected Int, got Str
───╯
